# python_package_example

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.aws/: credentials
.github/workflows/: .pre-commit-config.yaml  main.yml
basic_sort_3977/: int_sort.py
basic_sort_3977.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
basic_sort_UNIQUE_SUFFIX/: int_sort.py
test/: test_basic_sort.py
