[build-system]
requires = ["setuptools>=61.0", 
            "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "basic_sort_3977
version = "0.0.1"
authors = [{ name="Sam Waggoner", email="sam.waggoner@maine.edu" },
           { name="Owen Bellew", email="owen.bellew@maine.edu" },
           { name="Darien Orethun", email="darien.orethun@maine.edu" },
           { name="Wilder Baldwin", email="wilder.baldwin@maine.edu" },
]
description = "An exercise in our capstone course to practice creating project packages"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/pypa/python_package_exercise/issues"

[tool.black]
line-length = 120
